# ArmLLM

./: .gitignore  README.md  SETUP.md
2024/Module 1: Intro & Pretraining/: transformer.py
2024/Module 3: Visual LLMs/: README.md
2024/Module 5: RAG & KG-enhanced LLMs/KG/: Knowledge_Graph_Embeddings_101_solved.ipynb
2024/Module 5: RAG & KG-enhanced LLMs/Semantic Search/: ss_tutorial_basics.ipynb
2025/Agents/: README.md
2025/Agents/mcp/: README.md  chat_agent.py  mcp_servers.json  pyproject.toml
2025/Agents/mcp/custom_servers/weather/: main.py  pyproject.toml
2025/Agents/tool_calling/: LLM_Agents_Function_calling.ipynb  README.md  pyproject.toml
2025/Agents/vllm/: README.md  start_vllm.sh
2025/Agents/web_agent/: README.md  agent.py  pyproject.toml
2025/Module 1: Intro & Pretraining/: README.md  llama_generation.py  transformer.py
2025/Multimodality/: vlm.py  vlm_unsolved.py
2025/Post-Training/: LICENSE  README.md  pyproject.toml  requirements.txt  train_grpo.py  utils.py
Module 1: Intro & Pretraining/: README.md  llama.py  llama_generation.py  transformer.py  transformer_solved.py
Module 3: Visual LLMs/: vqvae.py
Module 4: LLM Interpretability, Safety & Privacy/: Llama2_LLM_Attribution.ipynb  Llama2_LLM_Exercises.ipynb  README.md  Safety and Privacy.md
Module 5: RAG & KG-enhanced LLMs/KG/: Knowledge_Graph_Embeddings_101_unsolved.ipynb  get_data_and_setup.sh
Module 5: RAG & KG-enhanced LLMs/Semantic Search/: indexing_tutorial_solved.ipynb  ss_tutorial_basics_solved.ipynb
