[project]
name = "nano-aha-moment"
version = "0.2.0"
readme = "README.md"

# flash-attn related setups
[project.optional-dependencies]
compile = ["flash-attn==2.7.4.post1"]
dev = [
    "torch==2.6.0",
    "vllm==0.8.5",
    "transformers==4.52.3",
    "accelerate==1.7.0",
    "datasets==3.6.0",
    "deepspeed==0.16.4",
    "wandb==0.19.11",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.7",
    "jupyter==1.1.1",
    "flash-attn==2.7.4.post1",
]

[tool.uv]
python-preference = "only-managed"
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4.post1"
requires-dist = ["torch", "setuptools"]

[tool.ruff]
line-length = 119
