[project]
name = "mcp-demo"
version = "0.1.0"
description = "ArmLLM MCP Agent Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.28",
    "mcp-use>=1.3.7",
    "streamlit>=1.39.0",
    "python-dotenv>=1.0.0",
    "watchdog>=6.0.0",
    "fastmcp>=2.10.6",
    "mcp[cli]>=1.11.0",
    "httpx>=0.28.1",
]

[tool.setuptools]
py-modules = ["chat_agent"]
